apps/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-nginx
  template:
    metadata:
      labels:
        app: argocd-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
