apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-nginx
spec:
  selector:
    app: argocd-nginx
  ports:
    - port: 80
      targetPort: 80
