apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-nginx
spec:
  ingressClassName: traefik
  rules:
    - host: nginx.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-nginx
                port:
                  number: 80
